# homeWork

./: CHANGELOG.md  LICENSE  README.md  homeWork.cabal
26febrero/: cadenas.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: homeWork-0.1.0.0-inplace.conf  package.cache
src/: HanoiTowers.hs
src/26febrero/: cadenas.hs
src/chapter2/: exercise2.hs  exercise3.hs  exercise4.hs  exercise5.hs
test/: HanoiTowersSpec.hs
